# zuip-edit

./: .gitignore  CMakeLists.txt  README  main.cpp  zuip-edit.kdev4  zuipedit.cpp
src/: CMakeLists.txt  presentationmodel.cpp  presentationmodel.h  zuipedit.cpp  zuipedit.h  zuipedit.ui  zuipscene.cpp  zuipscene.h
